@@ -75,6 +75,7 @@ Bug fixes:
 - PVP damage messages are now correctly displayed.
 - Fix display of Clown/Gypsy class name.
 - Warn about broken TCP/IP stack on Windows.
+- Kore will now properly look at the direction of the items being picked up.
 
 New features:
 - Added XKoreProxy module. Set configuration to 'XKore proxy' to work as
